Optimized code file ProductServiceImpl.java and GenericSpecificationBuilder.java